<resources>
    <string name="hello">HeadsUpNativeActivity!</string>
    <string name="app_name">USA Football</string>
    <string name="raised">You\'ve raised: $0.00</string>
    <string name="equipment_fitting">Equipment\nFitting</string>
    <string name="hns_heading">Health and Safety</string>
    <string name="hns_sub_heading">Resources to make a better, safer game.</string>
    <string name="concussion_awareness">Concussion Awareness</string>
    <string name="game_rule_none">No game rules</string>
    <string name="rules_games">Rules of Game</string>
    <string name="game_element">Game Elements</string>
    <string name="read_more">Read More</string>
    <string name="rule_book">Rules &amp; Signals </string>
    <string name="rule_book_nfl">NFL FLAG Rule Book</string>
    <string name="rule_book_tackle">Tackle Football Rule Book</string>
    <string name="concussion_signs">Concussion Signs\nand Symptoms</string>
    <string name="how_to_tackle">How to Tackle</string>
    <string name="safety_checklist">Safety Checklists</string>
    <string name="injury_prevention">Injury Prevention</string>
    <string name="conditioning">Conditioning</string>
    <string name="heat_preparedness">Heat Preparedness</string>
    <string name="hydration">Hydration</string>
    <string name="nutrition">Nutrition</string>
    <string name="safety_checklist_text1">Player Safety Recommended Standards </string>
    <string name="safety_checklist_text2">\"The Comprehensive Solution\" </string>
    <string name="parents">Parents</string>
    <string name="coaches">Coaches</string>
    <string name="commissioners">Commissioners</string>
    <string name="no_text">No text</string>
    <string name="heat_preparedness_imagelisttitle">Video</string>
    <string name="heat_preparedness_listtitle">Articles</string>
    <string name="about_headsup_football">About Heads Up Football</string>
    <string name="heads_up_fb_"></string>
    <string name="tackle_breakdown_position">Breakdown Position</string>
    <string name="tackle_breakdown_position_desc">The foundational starting point for all \nmovements and drills.</string>
    <string name="tackle_hit_position">Hit Position</string>
    <string name="tackle_hit_position_desc">Correct body posture at moments of impact for proper tackles.</string>
    <string name="tackle_buzz_to_hit_drill">Buzz to Hit Drill</string>
    <string name="tackle_buzz_to_hit_drill_desc">Proper technique to get in the hit position\nfrom the buzz movement.</string>
    <string name="tackle_air_buddy_drill">Air Buddy Drill</string>
    <string name="tackle_air_buddy_drill_desc">How the hips and arms work together\nkeeping the head from initiating contact \nduring tackle.</string>
    <string name="tackle_how_to_tackle">How To Tackle</string>
    <string name="tackle_how_to_tackle_desc">Learn what it means to practice \nHeads Up Tackling.</string>
    <string name="tackle_teaching_tackling">Teaching Tackling</string>
    <string name="tackle_teaching_tackling_desc">Learn about coaching with Heads Up \nTackling techniques.</string>
    <string name="tackle_rip_tackle_drill">Rip Tackle Drill</string>
    <string name="tackle_rip_tackle_drill_desc">Proper rip technique to use in a tackle.</string>
    <string name="tackle_how_to_tacklepage_desc">Heads Up Tackling was created with \ncontributions from USA Football\'s Tackle\nAdvisory Committee and Bobby Hosea.</string>
    <string name="heads_up_football">Heads Up Football</string>
    <string name="heads_up_football_video">Learn About Heads Up Football</string>
    <string name="heads_up_football_desc">Heads Up Football is USA Football\'s player safety program. It is a comprehensive approach to player safety involving leagues, parents, players and coaches. The program, which includes a list of recommended standards for leagues, parents and coaches, is run in partnership with the National Football League and includes content on concussion courtesy of the Centers for Disease Control and Prevention.</string>
    <string name="Checkin_desc">Support the game. Every time you check-in at a participating business, a donation is made\nto USA Football or a participating youth\nfootball league. Thanks for supporting\nbusinesses that support the game.</string>
    <string name="Checkin_Heading">Check-in for Football</string>
    <string name="cannot_connect">Cannot connect to\nUSA Football</string>
    <string name="checkinLink">www.checkinforgood.com</string>
    <string name="checkin_video_link">Watch a video on how it works.</string>
    <string name="checkin_logo_poweredBy">Powered by</string>
    <string name="check_icon">Check Icon</string>
    <string name="watch_more">Watch More</string>
    <string name="how_to_tackle_video">How to Tackle</string>
    <string name="how_to_tackle_desc">Learn what it means to practice Heads Up Tackling.</string>
    <string name="teaching_tackle">Teaching Tackling</string>
    <string name="teaching_tackle_desc">Learn about coaching with Heads Up Tackling techniques.</string>
    <string name="breaking_down_position">Breakdown Position</string>
    <string name="breaking_down_position_desc">The foundational starting point for all movements and drills.</string>
    <string name="hit_position">Breakdown Position</string>
    <string name="hit_position_desc">Correct body posture at moments of impact for proper tackles.</string>
    <string name="what_is_concussion">What is a concussion?</string>
    <string name="what_are_symptoms">What are the symptoms of a concussion?</string>
    <string name="what_do_you">What do you do if a concussion occurs?</string>
    <string name="when_can_player">When can a player come back to play?</string>
    <string name="minimizing_concussions">Minimizing Concussions</string>
    <string name="proper_helmet_fit">Proper helmet fitting</string>
    <string-array name="coaches_list">
        <item>Complete a comprehensive football coaching education course annually.</item>
        <item>Recognize and respond to suspected concussions.</item>
        <item>Teach Heads Up Tackling.</item>
        <item>Properly fit every helmet.</item>
        <item>Use a daily practice plan.</item>
    </string-array>
    <string-array name="commissioners_list">
        <item>Mandate coaches complete a comprehensive football coaching education course annually.</item>
        <item>Require concussion awareness training for coaches.</item>
        <item>Hold coaches accountable for knowing and teaching Heads Up Tackling.</item>
        <item>Properly maintain and fit equipment for all players.</item>
        <item>Background checks for all adult volunteers.</item>
    </string-array>
    <string name="parents_tab_header_1">Ask if your player\'s coach has completed a comprehensive football coaching education course this year.</string>
    <string name="parents_tab_header_2">Recognize the signs and symptoms of a concussion.</string>
    <string name="parents_tab_header_3">Know how to regularly check the fit of a helmet.</string>
    <string name="parents_tab_header_4">Make sure your player\'s coach is teaching Heads Up Tackling.</string>
    <string name="parents_tab_header_5">Ask if your league conducted background checks on all adult volunteers.</string>
    <string name="parents_tab_content_1">Appropriate answer from the coach: Yes, I have completed a coaching course that covers the fundamentals of football, Heads Up Tackling, CDC-approved concussion management, equipment fitting and positive coaching philosphy.</string>
    <string name="parents_tab_content_2">USA Football is home to the only football coaching course certified by the National Council for Accreditation of Coaching Education.</string>
    <string name="parents_tab_content_3">USA Football/National Center for Safety Initiatives Background Checks Program.</string>
    <string name="parents_tab_content_4">USA Football teamed up with the National Center for Safety Initiatives to offer background check services to commissioners.</string>
    <string name="parents_tab_content_5">The fully managed screening system is designed for youth-serving organizations with optimal safety in mind. The program is tailored to the needs of youth football organizations. Services include a fully managed and administered program featuring online applicant self-registration and "Red Light/Green Light" determinations for easy-to-read background check reports. The Check-it-Twice searches are the foundation for every program and include searches through two independently screened and selected and selected national database providers.</string>
    <string name="parents_tab_content_desc">Current courses include: \n\tLevel 1 and Level 2 National \n\tCertifications \n\t9 Tackle Football Coaching Courses\n\t2 Flag Football Coaching Courses\n\t1 Parent Course\n\t5 Game Official Courses</string>
    <string name="parents_tab_video_labels_1">&lt;u>Learn More&lt;/u></string>
    <string name="parents_tab_video_labels_2">&lt;u>Watch the videos&lt;/u></string>
    <string name="parents_tab_video_labels_3">&lt;u>Watch the Equipment Fitting video&lt;/u></string>
    <string name="parents_tab_video_labels_4">&lt;u>Watch our How to Tackle videos&lt;/u></string>
    <string name="parents_tab_video_labels_5">&lt;&lt;u>Learn about Subsidized Background Checks&lt;/u></string>
    <string name="parents_tab_video_labels_close">&lt;u>Close&lt;/u></string>
    <string name="signals_official_signal">Official Signals</string>
    <string name="signals_scoring">Scoring &amp; Timing</string>
    <string name="signals_dead_ball">Dead Ball</string>
    <string name="signals_live_ball">Live Ball</string>
    <string name="signals_conduct">Conduct</string>
    <string name="signals_safety">Safety</string>
    <string name="article_none">No Article found.</string>
    <string name="no_data">No data present!</string>
    <string name="about_usa_football_header">About USA Football</string>
    <string name="about_usa_football_text">Football\'s national governing body leads the game\'s developement, inspires participation and ensures a positive experience for all youth, high school and other amateur players.</string>
    <string name="about_usa_football_text_detail">Endowed by the NFL and NFLPA in 2002, USA Football is the official youth football development partner of the NFL, its 32 teams and the NFL Player Association and manages&#160; U.S. national teams for international competition. USA Football is an independent 501-c-3 non-profit organization that leads the development of the game through educational programs and innovative resources. USA Football also annually awards \u00241 million in equipment grants and subsidizes league volunteer background checks.</string>
    <string name="my_good">It\'s your good.</string>
    <string name="you_raised_text">You\'ve raised a pledge amount of:</string>
    <string name="your_checkin_text">Your Check-ins</string>
    <string name="my_good_text">Thanks for doing good by supporting the businesses and causes that strengthen our communities.</string>
    <string name="watch_video_overview">How to check-in to \nsupport player safety.</string>
    <string name="watch_video_text">It\'s easy to do good.</string>
    <string name="how_it_works">How it Works</string>
    <string name="label">Heads Up Football</string>
    <string name="login_do_good">Do good</string>
    <string name="login_email">Email Address</string>
    <string name="login_password">Password</string>
    <string name="social_signup_text">Sign up with</string>
    <string name="social_signup_privacy_text">We will never post anything to your\nfacebook or twitter account without\nyour permission.</string>
    <string name="social_signup_or">- OR -</string>
    <string name="create">Create</string>
    <string name="create_account">Create Account</string>
    <string name="create_first_name">First Name</string>
    <string name="create_last_name">Last Name</string>
</resources>