<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/injuryScrollView" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mainbg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txtInjuryPrevantionHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="14dp"
            android:paddingTop="10dp"
            android:text="@string/injury_prevention"
            android:textColor="@color/red_dark"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtInjuryPrevantionSubHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:text="@string/heat_preparedness_listtitle"
            android:textColor="#39518F"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView style="@style/listTextDivider" />

        <ListView
            android:id="@id/android:list"
            style="@style/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

       <TextView
	        android:id="@android:id/empty"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:padding="12dp"
	        android:text="@string/article_none"
	        android:textColor="@color/red"
	        android:visibility="gone" >
	    </TextView> 
    </LinearLayout>

</ScrollView>